--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -41,26 +41,42 @@
         </section>
 
         <section>
-          <h2>Agenda</h2>
+          <section>
+            <h2>Agenda</h2>
 
-          <br />
-          <br />
+            <br />
+            <br />
 
-          <div style="display: grid; grid-template-columns: 2fr 1fr">
-            <div style="align-self: center">
-              <ul>
-                <li>The Problem: Linters Can't Catch Everything</li>
-                <li>The Cost of "Just Ship It"</li>
-                <li>The Three Pillars of Enduring Code</li>
-                <li>Practical Patterns and Refactorings</li>
-                <li>Conclusion + Q&A</li>
-              </ul>
+            <div style="display: grid; grid-template-columns: 2fr 1fr">
+              <div style="align-self: center">
+                <ul>
+                  <li>The Problem: Linters Can't Catch Everything</li>
+                  <li>The Cost of "Just Ship It"</li>
+                  <li>The Three Pillars of Enduring Code</li>
+                  <li>Practical Patterns and Refactorings</li>
+                  <li>Conclusion + Q&A</li>
+                </ul>
+              </div>
+
+              <div>
+                <img data-src="./images/code-quality-measurement-wtfs-per-minute.png" width="300" />
+              </div>
             </div>
+          </section>
 
-            <div>
-              <img data-src="./images/code-quality-measurement-wtfs-per-minute.png" width="300" />
-            </div>
-          </div>
+          <section>
+            <h2>Why This Topic Matters</h2>
+
+            <br />
+            <br />
+
+            <ul>
+              <li>Code quality directly impacts team productivity and product reliability</li>
+              <li>Linters are a great start, but they don't ensure maintainable code</li>
+              <li>Understanding design principles helps create systems that endure change</li>
+              <li>Investing in code quality pays off in reduced technical debt and faster feature delivery</li>
+            </ul>
+          </section>
         </section>
 
         <section>
@@ -690,7 +706,7 @@ class AppointmentService {
             <br />
             <br />
 
-            <p>Try applying one of these refactorings:</p>
+            <p>Try applying one of these refactorings (if it makes sense to do so):</p>
 
             <br />
 
@@ -698,6 +714,27 @@ class AppointmentService {
               <li><span class="blue">Extract Method</span> to improve readability</li>
               <li><span class="blue">Strategy Pattern</span> to improve maintainability</li>
               <li><span class="blue">Dependency Injection</span> to improve testability</li>
+            </ol>
+          </section>
+
+          <section>
+            <h2>Additional Resources on Refactoring & Design Patterns</h2>
+
+            <br />
+            <br />
+
+            <ol>
+              <li>
+                <a href="https://refactoring.guru/refactoring" target="_blank">Refactoring Guru: Refactoring</a>
+              </li>
+
+              <li>
+                <a href="https://refactoring.guru/design-patterns" target="_blank">Refactoring Guru: Design Patterns</a>
+              </li>
+
+              <li>
+                <a href="https://typehero.dev/" target="_blank">TypeHero</a>
+              </li>
             </ol>
           </section>
 
