Added new resource for tech talk

--- a/presentations/beyond-the-linter/index.html
+++ b/presentations/beyond-the-linter/index.html
@@ -826,6 +826,10 @@ class AppointmentService {
               </li>
 
               <li>
+                <a href="https://web.dev/" target="_blank">web.dev</a>
+              </li>
+
+              <li>
                 <a href="https://typehero.dev/" target="_blank">TypeHero</a>
               </li>
             </ol>
