Cleaned up projects table

--- a/projects/index.html
+++ b/projects/index.html
@@ -50,7 +50,7 @@
 
         <input type="text" id="link-table-filter" placeholder="Filter Projects..." hidden />
 
-        <table id="link-table">
+        <table id="link-table" data-columns="2">
           <tbody>
             <tr>
               <td>
