Added two new project ideas

--- a/projects/index.html
+++ b/projects/index.html
@@ -54,6 +54,18 @@
           <tbody>
             <tr>
               <td>
+                <a href="/projects/js-document-picture-in-picture/">JS Document Picture-in-Picture</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <a href="/projects/js-html-sanitizer">JS HTML Sanitizer</a>
+              </td>
+            </tr>
+
+            <tr>
+              <td>
                 <a href="/projects/js-page-visibility">JS Page Visibility</a>
               </td>
             </tr>
